# LANBox

./: .gitignore  CMakeLists.txt  README.md  output.txt
include/: config.hpp  crypto.hpp  discovery.hpp  folder_watcher.hpp  group_manager.hpp  network_interface.hpp  peer.hpp  platform.hpp  protocol.hpp  sync_manager.hpp
src/: config.cpp  crypto.cpp  discovery.cpp  folder_watcher.cpp  group_manager.cpp  main.cpp  network_interface.cpp  peer.cpp  protocol.cpp  sync_manager.cpp  test_step1.cpp  test_step2.cpp  test_step3.cpp  test_step4a.cpp  test_step4b.cpp  test_step4b_sender.cpp  test_step4c.cpp  test_step4c_sender.cpp
